--- a/bury-chess-club-website/src/App.css
+++ b/bury-chess-club-website/src/App.css
@@ -1,38 +1,38 @@
 .App {
+  background-color: #4D7EA8;
+  color: white;
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+
+header {
+  background-color: #99CCFF;
+  font-weight: bold;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+#navigation {
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#navigation-list {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.navigation-item {
+  background-color: #4D7EA8;
+  padding: 7px 25px;
+  border-radius: 5px;
+}
+
+.navigation-link {
+  text-decoration: none;
+  color: white;
+}
+
+li {
+  list-style: none;
 }
