--- a/bury-chess-club-website/src/App.css
+++ b/bury-chess-club-website/src/App.css
@@ -1,18 +1,28 @@
 .App {
-  background-color: #4D7EA8;
-  color: white;
+  background-color: white;
+  color: #272932;
   text-align: center;
   display: flex;
   flex-direction: column;
 }
 
 header {
-  background-color: #99CCFF;
+  background-color: white;
   font-weight: bold;
-  color: white;
+}
+
+footer {
+  font-weight: bold;
+}
+
+#club-name-heading {
+  margin-top: 5px;
+  margin-bottom: 15px;
 }
 
 #navigation {
+  background-color: #828489;
+  padding-top: 2px;
 }
 
 #navigation-list {
@@ -23,16 +33,32 @@ header {
 }
 
 .navigation-item {
-  background-color: #4D7EA8;
+  background-color: white;
   padding: 7px 25px;
-  border-radius: 5px;
+  border-radius: 20px 20px 0px 0px;
 }
 
 .navigation-link {
   text-decoration: none;
-  color: white;
+  color: #272932;
 }
 
 li {
   list-style: none;
+}
+
+#logo-image {
+  width: 100px;
+  height: 100px;
+  padding: 0;
+  margin: 0;
+}
+
+/* Error page */
+#error-page {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
 }
