--- a/bury-chess-club-website/src/App.css
+++ b/bury-chess-club-website/src/App.css
@@ -1,4 +1,6 @@
 .App {
+  --dark-text-color: #272932;
+  --moderate-background-color: #828489;
   background-color: white;
   color: #272932;
   text-align: center;
@@ -6,12 +8,10 @@
   flex-direction: column;
 }
 
+/* Header */
+
 header {
   background-color: white;
-  font-weight: bold;
-}
-
-footer {
   font-weight: bold;
 }
 
@@ -20,31 +20,57 @@ footer {
   margin-bottom: 15px;
 }
 
+#navbar {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  background-color: var(--moderate-background-color);
+  gap: 25px;
+}
+
 #navigation {
-  background-color: #828489;
   padding-top: 2px;
 }
 
 #navigation-list {
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
-  align-items: center;
+  justify-content: flex-start;
+  gap: 30px;
 }
 
 .navigation-item {
   background-color: white;
-  padding: 7px 25px;
-  border-radius: 20px 20px 0px 0px;
+  padding: 5px 25px;
+  border-radius: 15px 15px 0px 0px;
 }
 
 .navigation-link {
   text-decoration: none;
-  color: #272932;
+  color: var(--dark-text-color);
 }
 
 li {
   list-style: none;
+}
+
+#social-icons {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 10px;
+
+}
+
+.social-icon {
+  font-size: 2rem;
+  text-decoration: none;
+  color: var(--dark-text-color);
+  background-color: white;
+  width: 40px;
+  height: 35px;
+  border-radius: 5px;
 }
 
 #logo-image {
@@ -52,6 +78,12 @@ li {
   height: 100px;
   padding: 0;
   margin: 0;
+}
+
+/* Footer */
+
+footer {
+  font-weight: bold;
 }
 
 /* Error page */
