--- a/bury-chess-club-website/src/App.css
+++ b/bury-chess-club-website/src/App.css
@@ -6,13 +6,14 @@
   --light-background-color: #283b58;
   background-color: white;
   color: var(--dark-text-color);
-  text-align: center;
-  display: flex;
-  flex-direction: column;
   background-color: var(--moderate-background-color);
 }
 
 .page {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  justify-content: flex-start;
   width: 80%;
   margin: auto auto;
   padding: 1% 1%;
@@ -123,6 +124,7 @@ li {
   background-color: white;
   height: 80%;
   margin-right: 5px;
+  border-radius: 10px;
 }
 
 .social-icon {
@@ -159,8 +161,25 @@ footer p {
 
 /* About page */
 
-#league-match-image {
-  max-width: 100%;
-  width: auto;
-  height: auto;
+.image-gallery {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  gap: 16px;
+  max-width: 1400px;
+  margin: 0 auto;
+  padding: 20px 10px;
 }
+
+.image-gallery img {
+  width: 100%;
+  max-width: 350px;
+  height: 300px;
+  object-fit: cover;
+  border-radius: 10px;
+}
+
+/* Contact page */
+
