Added line breaks and id for galleries.

--- a/bury-chess-club-website/src/App.css
+++ b/bury-chess-club-website/src/App.css
@@ -35,8 +35,29 @@ p {
 main {
   background-color: white;
   border-radius: 20px;
-  padding-left: 10px;
-  padding-right: 10px;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
+
+.image-gallery {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 16px;
+  max-width: 1400px;
+  margin: 0 0;
+  padding: 20px 10px;
+}
+
+.image-gallery img {
+  width: 100%;
+  max-width: 350px;
+  height: 300px;
+  object-fit: cover;
+  border-radius: 10px;
 }
 
 /* Header */
@@ -166,25 +187,6 @@ footer p {
 
 /* About page */
 
-.image-gallery {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
-  gap: 16px;
-  max-width: 1400px;
-  margin: 0 auto;
-  padding: 20px 10px;
-}
-
-.image-gallery img {
-  width: 100%;
-  max-width: 350px;
-  height: 300px;
-  object-fit: cover;
-  border-radius: 10px;
-}
 
 /* Contact page */
 
