--- a/bury-chess-club-website/src/App.css
+++ b/bury-chess-club-website/src/App.css
@@ -82,7 +82,7 @@ main {
 
 hr {
   border: var(--theme-color-moderate) solid 3px;
-  border-radius: 100%;
+  border-radius: 50%;
   margin-top: 25px;
   margin-bottom: 25px;
 }
@@ -148,9 +148,9 @@ li {
   margin-left: auto;
   display: flex;
   flex-direction: row;
-  justify-content: flex-start;
+  justify-content: space-around;
   align-items: center;
-  gap: 15px;
+  gap: 5px;
   background-color: var(--theme-color-light);
   height: 80%;
   border-radius: 10px;
@@ -162,6 +162,17 @@ li {
   color: var(--theme-color-dark);
   padding: 3px;
   border-radius: 5px;
+}
+
+#facebook-icon {
+  font-style: normal;
+  font-size: 2.2rem;
+  font-family: sans-serif;
+  padding: 5px;
+}
+
+#pawn-icon {
+  font-style: normal;
 }
 
 #logo-image {
