--- a/bury-chess-club-website/src/App.css
+++ b/bury-chess-club-website/src/App.css
@@ -21,7 +21,7 @@
 }
 
 h1 {
-  font-size: 2rem;
+  font-size: 2.2rem;
   text-align: left;
 }
 
@@ -109,6 +109,7 @@ header {
 #navigation-list {
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
   justify-content: flex-start;
   gap: 10px;
 }
