--- a/bury-chess-club-website/src/App.css
+++ b/bury-chess-club-website/src/App.css
@@ -20,8 +20,6 @@
   background-color: var(--theme-color-dark);
 }
 
-
-
 h1 {
   font-size: 2.2rem;
   text-align: left;
@@ -140,6 +138,48 @@ li {
   list-style: none;
 }
 
+#logo-image {
+  width: 100px;
+  height: 100px;
+  padding: 0;
+  margin: 0;
+  border: 5px solid var(--theme-color-dark);
+  border-radius: 60px;
+}
+
+#chess-com-logo {
+  filter: brightness(100%) saturate(100%) hue-rotate(deg); /* Default, can be adjusted if needed */
+  fill: var(--theme-color-dark); /* Apply the color from your CSS variable */
+}
+
+/* Footer */
+
+footer {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+
+footer p {
+  color: var(--theme-color-light);
+  font-weight: bold;
+  text-align: center;
+}
+
+.notices {
+  margin-left: auto;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 25px;
+}
+
+.notices a {
+  color: var(--theme-color-light);
+}
+
 #social-icons {
   margin-left: auto;
   display: flex;
@@ -171,43 +211,6 @@ li {
   font-style: normal;
 }
 
-#logo-image {
-  width: 100px;
-  height: 100px;
-  padding: 0;
-  margin: 0;
-  border: 5px solid var(--theme-color-dark);
-  border-radius: 60px;
-}
-
-#chess-com-logo {
-  filter: brightness(100%) saturate(100%) hue-rotate(deg); /* Default, can be adjusted if needed */
-  fill: var(--theme-color-dark); /* Apply the color from your CSS variable */
-}
-
-/* Footer */
-
-footer {
-}
-
-footer p {
-  color: var(--theme-color-light);
-  font-weight: bold;
-  text-align: center;
-}
-
-.notices {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  gap: 25px;
-}
-
-.notices a {
-  color: var(--theme-color-light);
-}
-
 /* Error page */
 
 #error-page {
@@ -237,6 +240,19 @@ footer p {
   font-weight: bold;
 }
 
+/* Game page */
+
+.chess-game-container {
+  display: flex;
+  flex-direction: column;
+}
+
+.chess-view-container {
+  display: flex;
+  flex-direction: row;
+  gap: 15px;
+}
+
 /* Small Screens & Mobile Devices */
 
 @media only screen and (max-width: 600px) {
@@ -248,8 +264,7 @@ footer p {
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: space-around;
-    gap: 1%;
+    justify-content: space-between;
   }
 
   #logo-image {
@@ -261,6 +276,7 @@ footer p {
   }
 
   #club-name-heading {
+    font-size: 2.2rem;
     text-align: left;
     margin: 0px 5px;
   }
@@ -271,7 +287,7 @@ footer p {
 
   #navigation-list {
     padding: 0px;
-    margin: 10px 0px 0px 0px;
+    margin: 10px 5px 0px 0px;
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
@@ -307,16 +323,15 @@ footer p {
     background-color: blue;
   }
 
+  /* Give social icons padding on mobile */
+
   #social-icons {
-    display: none;
-    margin: 0;
-    padding: 0;
+    margin-right: 5px;
+    padding: 0px;
   }
   
   .social-icon {
-    display: none;
-    margin: 0;
-    padding: 0;
+    padding: 1px;
   }
 
   /* General Mobile */
@@ -357,7 +372,11 @@ footer p {
   main {
     background-color: var(--theme-color-light);
     border-radius: 0px;
-    padding-left: 20px;
-    padding-right: 20px;
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  footer {
+    margin-bottom: 10px;
   }
 }
