--- a/bury-chess-club-website/src/App.css
+++ b/bury-chess-club-website/src/App.css
@@ -313,6 +313,13 @@ footer p {
   gap: 15px;
 }
 
+/* Hide Facebook Timeline when screen width is small */
+@media only screen and (max-width: 1000px) {
+  #facebook-panel {
+    display: none;
+  }
+}
+
 /* Small Screens & Mobile Devices */
 
 @media only screen and (max-width: 600px) {
