Added search icon button and changed names to text input.

--- a/bury-chess-club-website/src/App.css
+++ b/bury-chess-club-website/src/App.css
@@ -308,6 +308,10 @@ footer p {
   gap: 15px;
 }
 
+.game-search-options {
+  margin-top: 15px;
+}
+
 /* Hide Facebook Timeline when screen width is small */
 @media only screen and (max-width: 1200px) {
   #facebook-panel {
