--- a/bury-chess-club-website/src/App.css
+++ b/bury-chess-club-website/src/App.css
@@ -303,6 +303,7 @@ footer p {
 /* Game page */
 
 .games {
+  margin-top: 10px;
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(500px, 1fr)); /* Adjust the column width as needed */
   gap: 15px;
@@ -311,6 +312,7 @@ footer p {
 .game-search-options {
   margin-top: 15px;
 }
+
 
 /* Hide Facebook Timeline when screen width is small */
 @media only screen and (max-width: 1200px) {
